--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,17 +1,17 @@
 ---
 - summary: |
-    Поиск товаров
+Поиск товаров
   requirement: |
-    При вводе ключевого слова или категории пользователь находит искомый товар
-  prerequisites: |
-    Открыта страница магазина
+  При вводе ключевого слова или категории пользователь находит искомый товар
+  prerequisites: Открыта страница магазина
   test-data: |
-    Ключевое слово: red
-    Категория: beauty
-  steps:
+  Ключевое слово: red 
+  Категория: beauty
+  steps: |
     - Вводим в поиск ключевое слово
     - Выбираем категорию из списка 
-  expected-result: |
-    Страница выводит искомый товар
+  expected-result: | 
+  Страница выводит искомый товар
+
 
     
