--- a/test-cases.yml
+++ b/test-cases.yml
@@ -9,9 +9,25 @@
   Категория: beauty
   steps: |
     - Вводим в поиск ключевое слово
-    - Выбираем категорию из списка 
+    - Выбираем категорию из списка "Категория"
   expected-result: | 
   Страница выводит искомый товар
 
+- summary: |
+Просмотр корзины и добавление товара
+  requirement: |
+  Пользователь может добавить товар в корзину и посмотреть ее содержимое.
+  prerequisites: Открыта страница магазина
+  test-data: |
+  Ключевое слово: red 
+  Категория: beauty
+  steps: |
+     - Вводим в поиск ключевое слово
+     - Выбираем категорию из списка "Категория"
+     - Нажимаем на кнопку "Добавить в корзину"
+     - Нажимаем на "Коризна"
+  expected-result: | 
+  Товар добавлен в корзину
 
+  
     
