--- a/test-cases.yml
+++ b/test-cases.yml
@@ -29,5 +29,38 @@
   expected-result: | 
   Товар добавлен в корзину
 
+  - summary: |
+  Просмотр товара Красная помада и подробной информации о нем
+  requirement: |
+  Пользователь может просмотреть товар Красная помада и информацию о нем описание, цена, рейтинг, скидка, количество товара
+  prerequisites: Открыта страница магазина
+  test-data: |
+  Ключевое слово: red 
+  Категория: beauty
+  steps: |
+    - Вводим в поиск ключевое слово
+    - Выбираем категорию из списка "Категория"
+    - Выбираем карточку товара "Красная помада"
+  expected-result: | 
+  Страницы выводит подробную информацию о товаре описание, цена, рейтинг, скидка, количество товара
+
+  - summary: |
+  Фильтр товаров
+  requirement: |
+  Пользователь с помощью фильтров модет сортировать товары
+  prerequisites: Открыта страница магазина
+  test-data: |  
+  Категория: Мебель
+  Бренд: Мебельная компания, Кнолл, Тенденции в ванных комнатах
+  В наличии: галочка
+  Цена: от 0 до 900
+  steps: |
+    - Выбираем категорию
+    - Выбираем бренд
+    - Ставим галочку в налчии
+    - Устанавливаем фильтр цены
+  expected-result: | 
+  Страница выводит информациб по установленным фильтрам
+
   
     
