--- a/test-cases.yml
+++ b/test-cases.yml
@@ -5,7 +5,7 @@
   При вводе ключевого слова или категории пользователь находит искомый товар
   prerequisites: Открыта страница магазина
   test-data: |
-  Ключевое слово: red 
+  Ключевое слово: lipstick
   Категория: beauty
   steps: |
     - Вводим в поиск ключевое слово
@@ -19,7 +19,7 @@
   Пользователь может добавить товар в корзину и посмотреть ее содержимое.
   prerequisites: Открыта страница магазина
   test-data: |
-  Ключевое слово: red 
+  Ключевое слово: lipstick 
   Категория: beauty
   steps: |
      - Вводим в поиск ключевое слово
@@ -35,7 +35,7 @@
   Пользователь может просмотреть товар Красная помада и информацию о нем описание, цена, рейтинг, скидка, количество товара
   prerequisites: Открыта страница магазина
   test-data: |
-  Ключевое слово: red 
+  Ключевое слово: lipstick
   Категория: beauty
   steps: |
     - Вводим в поиск ключевое слово
@@ -47,7 +47,7 @@
   - summary: |
   Фильтр товаров
   requirement: |
-  Пользователь с помощью фильтров модет сортировать товары
+  Пользователь с помощью фильтров может сортировать товары
   prerequisites: Открыта страница магазина
   test-data: |  
   Категория: Мебель
