--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,17 +1,45 @@
 ---
 - summary: |
-    Не работает поиск по клбчевому слову
+    Не работает поиск по ключевому слову
   environment: |
-    Google Chrome   107.0.5304.121 (Официальная сборка) (64 бит)
-    ОС Linux 22.04
+    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
+    ОС MacOS 15.3.1 (24D70)
   steps-to-reproduce: |
-    1. Зайти на страницу логина https://runit.hexlet.ru/login
-    2. Нажать ссылку «Не помню пароль»
-    3. Ввести почту и нажать «Восстановить пароль»
+    1. Вводим в поиск ключевое слово "lipstick".
+    2. Выбираем категорию "beauty" из списка "Category".
   expected-result: |
-    На странице формы будет сообщение с просьбой проверить почту
-    На почту придет письмо со ссылкой на восстановление пароля
+    Страница выводит искомый товар.
   actual-result: |
-    На странице ничего не происходит
-    В консоли браузера в Devtools выводится почта
+    На странице ничего не происходит.
+    Страница выводит посторонние товары
 
+- summary: |
+    Просмотр корзины и добавление товара
+  environment: |
+    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
+    ОС MacOS 15.3.1 (24D70)
+  steps-to-reproduce: |
+    1. Вводим в поиск ключевое слово "Lipstick".
+    2. Выбираем категорию "beauty" из списка "Category".
+    3. Нажимаем на кнопку "Add to cart".
+    4. Нажимаем на "Cart".
+  expected-result: |
+    Искомый товар добавлен в корзину
+  actual-result: |
+    Товар не был добавлен в коризну
+
+- summary: |
+    Просмотр товара Red lipstick и подробной информации о нем
+  environment: |
+    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
+    ОС MacOS 15.3.1 (24D70)
+  steps-to-reproduce: |
+    1. Вводим в поиск ключевое слово Lipstick
+    2. Выбираем категорию "beauty" из списка "Category".
+    3. Выбираем карточку товара "Red lipstick"
+  expected-result: |
+    Страница выводит подробную информацию о товаре описание, цена, рейтинг, скидка, количество товара
+  actual-result: |
+    Страница не открывает карточку товара
+    
+    
