--- a/bugreports.yml
+++ b/bugreports.yml
@@ -26,7 +26,7 @@
   expected-result: |
     Искомый товар добавлен в корзину
   actual-result: |
-    Товар не был добавлен в коризну
+    При нажатии на кнопку "Add to cart" ничего не произошло
 
 - summary: |
     Просмотр товара Red lipstick и подробной информации о нем
@@ -41,5 +41,23 @@
     Страница выводит подробную информацию о товаре описание, цена, рейтинг, скидка, количество товара
   actual-result: |
     Страница не открывает карточку товара
+
+- summary: |
+    Пользователь с помощью фильтров может сортировать товары
+  environment: |
+    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
+    ОС MacOS 15.3.1 (24D70)
+  steps-to-reproduce: |
+    1. Выбираем категорию furniture
+    2. Выбираем бренд
+    3. Ставим галочку в окно In Stock
+    4. Устанавливаем фильтр цены от 1 до 6576,499
+  expected-result: |
+    Страница выводит информацию по установленным фильтрам
+  actual-result: |
+    Страница выводит посторонню информацию не входяющую в фильтры
+    Страница не выводит информацию по фильтрам
+    Если убираем галочку в окне In Stock, то страница выводит результат Nothing found!
+    
     
     
