--- a/bugreports.yml
+++ b/bugreports.yml
@@ -93,7 +93,7 @@
     Видим весь заказанный товар, цену по каждому товару, количество штук товара и общую цену
   actual-result: |
     Не отображается цена или другой параметр, который должен отображаться
-    В DevTools есть ошибка скриншот
+    В DevTools есть ошибка 500 failed
     
     
     
