--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,66 +1,65 @@
 ---
 - summary: |
-  Поиск товаров
-requirement: |
-  При вводе ключевого слова или категории пользователь находит искомый товар
-prerequisites: Открыта страница магазина
-test-data: |
-  Ключевое слово: lipstick
-  Категория: beauty
-steps: |
-    - Вводим в поиск ключевое слово
-    - Выбираем категорию из списка "Категория"
-expected-result: | 
-  Страница выводит искомый товар
-
-- summary: |
-  Просмотр корзины и добавление товара
+    Поиск товаров
   requirement: |
-  Пользователь может добавить товар в корзину и посмотреть ее содержимое.
-  prerequisites: Открыта страница магазина
+    При вводе ключевого слова или категории пользователь находит искомый товар.
+  prerequisites: Открыта страница магазина.
   test-data: |
-  Ключевое слово: lipstick 
-  Категория: beauty
+    Ключевое слово: lipstick
+    Категория: beauty
   steps: |
-     - Вводим в поиск ключевое слово
-     - Выбираем категорию из списка "Категория"
-     - Нажимаем на кнопку "Добавить в корзину"
-     - Нажимаем на "Коризна"
+    - Ввести в поиск ключевое слово.
+    - Выбрать категорию из списка "Категория".
   expected-result: | 
-  Товар добавлен в корзину
+    Страница выводит искомый товар.
 
 - summary: |
-  Просмотр товара Красная помада и подробной информации о нем
+    Просмотр корзины и добавление товара
   requirement: |
-  Пользователь может просмотреть товар Красная помада и информацию о нем описание, цена, рейтинг, скидка, количество товара
-  prerequisites: Открыта страница магазина
+    Пользователь может добавить товар в корзину и посмотреть её содержимое.
+  prerequisites: Открыта страница магазина.
   test-data: |
-  Ключевое слово: lipstick
-  Категория: beauty
+    Ключевое слово: lipstick 
+    Категория: beauty.
   steps: |
-    - Вводим в поиск ключевое слово
-    - Выбираем категорию из списка "Категория"
-    - Выбираем карточку товара "Красная помада"
+    - Ввести в поиск ключевое слово.
+    - Выбрать категорию из списка "Категория".
+    - Нажать на кнопку "Добавить в корзину".
+    - Нажать на "Корзина".
   expected-result: | 
-  Страницы выводит подробную информацию о товаре описание, цена, рейтинг, скидка, количество товара
+    Товар добавлен в корзину.
 
 - summary: |
-  Фильтр товаров
+    Просмотр товара "Красная помада" и подробной информации о нём
   requirement: |
-  Пользователь с помощью фильтров может сортировать товары
-  prerequisites: Открыта страница магазина
+    Пользователь может просмотреть товар "Красная помада" и информацию о нём, включая описание, цену, рейтинг, скидку, количество товара.
+  prerequisites: Открыта страница магазина.
+  test-data: |
+    Ключевое слово: lipstick
+    Категория: beauty.
+  steps: |
+    - Ввести в поиск ключевое слово.
+    - Выбрать категорию из списка "Категория".
+    - Выбрать карточку товара "Красная помада".
+  expected-result: | 
+    Страница выводит подробную информацию о товаре: описание, цена, рейтинг, скидка, количество товара.
+
+- summary: |
+    Фильтр товаров
+  requirement: |
+    Пользователь с помощью фильтров может сортировать товары.
+  prerequisites: Открыта страница магазина.
   test-data: |  
-  Категория: Мебель
-  Бренд: Мебельная компания, Кнолл, Тенденции в ванных комнатах
-  В наличии: галочка
-  Цена: от 0 до 900
+    Категория: Мебель
+    Бренд: Мебельная компания, Knoll, Тенденции в ванных комнатах.
+    В наличии: галочка.
+    Цена: от 0 до 900.
   steps: |
-    - Выбираем категорию
-    - Выбираем бренд
-    - Ставим галочку в налчии
-    - Устанавливаем фильтр цены
+    - Выбрать категорию.
+    - Выбрать бренд.
+    - Установить галочку "В наличии".
+    - Установить диапазон цен.
   expected-result: | 
-  Страница выводит информациб по установленным фильтрам
-
+    Страница выводит информацию по установленным фильтрам.
   
     
