--- a/test-cases.yml
+++ b/test-cases.yml
@@ -9,7 +9,7 @@
     Категория: beauty
   steps: |
     - Ввести в поиск ключевое слово.
-    - Выбрать категорию из списка "Категория".
+    - Выбрать категорию из списка Категория.
   expected-result: | 
     Страница выводит искомый товар.
 
@@ -23,24 +23,24 @@
     Категория: beauty.
   steps: |
     - Ввести в поиск ключевое слово.
-    - Выбрать категорию из списка "Категория".
+    - Выбрать категорию из списка Категория.
     - Нажать на кнопку "Добавить в корзину".
-    - Нажать на "Корзина".
+    - Нажать на Корзина.
   expected-result: | 
     Товар добавлен в корзину.
 
 - summary: |
-    Просмотр товара "Красная помада" и подробной информации о нём
+    Просмотр товара Красная помада и подробной информации о нём
   requirement: |
-    Пользователь может просмотреть товар "Красная помада" и информацию о нём, включая описание, цену, рейтинг, скидку, количество товара.
+    Пользователь может просмотреть товар Красная помада и информацию о нём, включая описание, цену, рейтинг, скидку, количество товара.
   prerequisites: Открыта страница магазина.
   test-data: |
     Ключевое слово: lipstick
     Категория: beauty.
   steps: |
     - Ввести в поиск ключевое слово.
-    - Выбрать категорию из списка "Категория".
-    - Выбрать карточку товара "Красная помада".
+    - Выбрать категорию из списка Категория.
+    - Выбрать карточку товара Красная помада.
   expected-result: | 
     Страница выводит подробную информацию о товаре: описание, цена, рейтинг, скидка, количество товара.
 
@@ -57,7 +57,7 @@
   steps: |
     - Выбрать категорию.
     - Выбрать бренд.
-    - Установить галочку "В наличии".
+    - Установить галочку В наличии.
     - Установить диапазон цен.
   expected-result: | 
     Страница выводит информацию по установленным фильтрам.
