--- a/requirements.yml
+++ b/requirements.yml
@@ -13,4 +13,4 @@ non-functional:
   - Сайт должен иметь мобильную версию
 implicit:
   - Список количества страниц
-  - Нет кнопки "Авторизация"
+  - Нет кнопки Авторизация
