--- a/bugreports.yml
+++ b/bugreports.yml
@@ -5,8 +5,8 @@
     Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
     ОС MacOS 15.3.1 (24D70)
   steps-to-reproduce: |
-    1. Вводим в поиск ключевое слово "lipstick".
-    2. Выбираем категорию "beauty" из списка "Category".
+    1. Вводим в поиск ключевое слово lipstick.
+    2. Выбираем категорию beauty из списка Category.
   expected-result: |
     Страница выводит искомый товар.
   actual-result: |
@@ -19,9 +19,9 @@
     Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
     ОС MacOS 15.3.1 (24D70)
   steps-to-reproduce: |
-    1. Вводим в поиск ключевое слово "Lipstick".
-    2. Выбираем категорию "beauty" из списка "Category".
-    3. Нажимаем на кнопку "Add to cart".
+    1. Вводим в поиск ключевое слово Lipstick.
+    2. Выбираем категорию beauty из списка Category.
+    3. Нажимаем на кнопку Add to cart.
     4. Нажимаем на "Cart".
   expected-result: |
     Искомый товар добавлен в корзину
@@ -35,8 +35,8 @@
     ОС MacOS 15.3.1 (24D70)
   steps-to-reproduce: |
     1. Вводим в поиск ключевое слово Lipstick
-    2. Выбираем категорию "beauty" из списка "Category".
-    3. Выбираем карточку товара "Red lipstick"
+    2. Выбираем категорию beauty из списка Category.
+    3. Выбираем карточку товара Red lipstick
   expected-result: |
     Страница выводит подробную информацию о товаре описание, цена, рейтинг, скидка, количество товара
   actual-result: |
@@ -65,11 +65,11 @@
     Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
     ОС MacOS 15.3.1 (24D70)
   steps-to-reproduce: |
-    1. Вводим в поиск ключевое слово "Lipstick".
-    2. Выбираем категорию "beauty" из списка "Category".
-    3. Нажимаем на кнопку "Add to cart".
-    4. Нажимаем на "Cart".
-    5. Нажимаем на кнопку "Delete"
+    1. Вводим в поиск ключевое слово Lipstick.
+    2. Выбираем категорию beauty из списка Category.
+    3. Нажимаем на кнопку Add to cart.
+    4. Нажимаем на Cart.
+    5. Нажимаем на кнопку Delete
     6. Заправшивается подтверждение на удаление
     7. Нажимаем согласиться.
   expected-result: |
@@ -84,11 +84,11 @@
     Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
     ОС MacOS 15.3.1 (24D70)
   steps-to-reproduce: |
-    1. Вводим в поиск ключевое слово "Lipstick".
-    2. Выбираем категорию "beauty" из списка "Category".
-    3. Нажимаем на кнопку "Add to cart".
-    4. Нажимаем на "Cart".
-    5. Нажимаем кнопку "Chekout"
+    1. Вводим в поиск ключевое слово Lipstick.
+    2. Выбираем категорию beauty из списка Category.
+    3. Нажимаем на кнопку Add to cart.
+    4. Нажимаем на Cart.
+    5. Нажимаем кнопку Chekout
   expected-result: |
     Видим весь заказанный товар, цену по каждому товару, количество штук товара и общую цену
   actual-result: |
