--- a/test-cases.yml
+++ b/test-cases.yml
@@ -24,7 +24,7 @@
   steps: |
     - Ввести в поиск ключевое слово.
     - Выбрать категорию из списка Категория.
-    - Нажать на кнопку "Добавить в корзину".
+    - Нажать на кнопку Добавить в корзину.
     - Нажать на Корзина.
   expected-result: | 
     Товар добавлен в корзину.
