--- a/test-cases.yml
+++ b/test-cases.yml
@@ -3,7 +3,7 @@
     Поиск товаров
   requirement: |
     При вводе ключевого слова или категории пользователь находит искомый товар.
-  prerequisites: Открыта страница магазина.
+  prerequisites: no-data
   test-data: |
     Ключевое слово: lipstick
     Категория: beauty
@@ -17,7 +17,7 @@
     Просмотр корзины и добавление товара
   requirement: |
     Пользователь может добавить товар в корзину и посмотреть её содержимое.
-  prerequisites: Открыта страница магазина.
+  prerequisites: no-data
   test-data: |
     Ключевое слово: lipstick 
     Категория: beauty.
@@ -33,7 +33,7 @@
     Просмотр товара Красная помада и подробной информации о нём
   requirement: |
     Пользователь может просмотреть товар Красная помада и информацию о нём, включая описание, цену, рейтинг, скидку, количество товара.
-  prerequisites: Открыта страница магазина.
+  prerequisites: no-data
   test-data: |
     Ключевое слово: lipstick
     Категория: beauty.
@@ -48,7 +48,7 @@
     Фильтр товаров
   requirement: |
     Пользователь с помощью фильтров может сортировать товары.
-  prerequisites: Открыта страница магазина.
+  prerequisites: no-data
   test-data: |  
     Категория: Мебель
     Бренд: Мебельная компания, Knoll, Тенденции в ванных комнатах.
