--- a/testing-report.yml
+++ b/testing-report.yml
@@ -8,7 +8,7 @@
   status: pass 
 
 - summary: |
-    Просмотр товара Red Lipstick и подробной информации о нем
+    Просмотр товара  и подробной информации о нем
   status: pass
 
 - summary: |
