--- a/test-cases.yml
+++ b/test-cases.yml
@@ -11,7 +11,7 @@
     Страница выводит искомый товар.
 
 - summary: |
-    Просмотр корзины и добавление товара
+    Добавление товара в корзину
   requirement: |
     Пользователь может добавить товар в корзину и посмотреть её содержимое.
   prerequisites: no-data
