--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,12 +1,11 @@
 ---
 - summary: |
-    Поиск товаров
+    Поиск товаров по ключевому слову
   requirement: |
     При вводе ключевого слова или категории пользователь находит искомый товар.
   prerequisites: no-data
   steps: |
-    - Ввести в поиск ключевое слово.
-    - Выбрать категорию из списка Категория.
+    - Ввести любой товар
   expected-result: | 
     Страница выводит искомый товар.
 
