--- a/test-cases.yml
+++ b/test-cases.yml
@@ -15,36 +15,31 @@
     Пользователь может добавить товар в корзину и посмотреть её содержимое.
   prerequisites: no-data
   steps: |
-    - Ввести в поиск ключевое слово.
-    - Выбрать категорию из списка Категория.
-    - Нажать на кнопку Добавить в корзину.
-    - Нажать на Корзина.
+    - Выбрать любой товар
+    - Добавить товар в корзину
+    - Открыть корзину.
   expected-result: | 
-    Товар добавлен в корзину.
+    Товар успешно добавлен и отображается в корзине.
 
 - summary: |
-    Просмотр товара Красная помада и подробной информации о нём
+    Просмотр товара и подробной информации о нём
   requirement: |
     Пользователь может просмотреть товар Красная помада и информацию о нём, включая описание, цену, рейтинг, скидку, количество товара.
   prerequisites: no-data
   steps: |
-    - Ввести в поиск ключевое слово.
-    - Выбрать категорию из списка Категория.
-    - Выбрать карточку товара Красная помада.
+    - Выбрать любой товар
+    - Открыть выбранный товар
   expected-result: | 
-    Страница выводит подробную информацию о товаре: описание, цена, рейтинг, скидка, количество товара.
+    Открыта карточка товара с подробной информацией
 
 - summary: |
-    Фильтр товаров
+    Фильтр товаров по бренду
   requirement: |
     Пользователь с помощью фильтров может сортировать товары.
   prerequisites: no-data
   steps: |
-    - Выбрать категорию.
-    - Выбрать бренд.
-    - Установить галочку В наличии.
-    - Установить диапазон цен.
+    - Выбрать любой бренд
   expected-result: | 
-    Страница выводит информацию по установленным фильтрам.
+    Отображаются товары выбранного бренда
   
     
