--- a/bugreports.yml
+++ b/bugreports.yml
@@ -60,26 +60,7 @@
     Если убираем галочку в окне In Stock, то страница выводит результат Nothing found!
 
 - summary: |
-    Удаление товара из корзины
-  environment: |
-    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
-    ОС MacOS 15.3.1 (24D70)
-  steps-to-reproduce: |
-    1. Вводим в поиск ключевое слово Lipstick.
-    2. Выбираем категорию beauty из списка Category.
-    3. Нажимаем на кнопку Add to cart.
-    4. Нажимаем на Cart.
-    5. Нажимаем на кнопку Delete
-    6. Заправшивается подтверждение на удаление
-    7. Нажимаем согласиться.
-  expected-result: |
-    Товар удален из корзины
-  actual-result: |
-    Ошибка удаления товара
-    Подтверждение не запрашивается
-
-- summary: |
-    Chekout товара в корзине
+    Ошибка 500 при оформлении заказа
   environment: |
     Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
     ОС MacOS 15.3.1 (24D70)
