--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,10 +1,10 @@
 ---
 - summary: |
-    Поиск товаров
+    Поиск товаров по ключевому слову
   status: fail
 
 - summary: |
-    Просмотр корзины и добавление товара
+    Добавление товара в корзину
   status: pass 
 
 - summary: |
@@ -12,5 +12,5 @@
   status: pass
 
 - summary: |
-    Фильтр товаров
+    Фильтр товаров по бренду
   status: pass  
