--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,17 +1,16 @@
 ---
 - summary: |
-    Не работает поиск по ключевому слову
+    Ошибка поиска товаров по ключевому слову
   environment: |
     Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
     ОС MacOS 15.3.1 (24D70)
   steps-to-reproduce: |
-    1. Вводим в поиск ключевое слово lipstick.
-    2. Выбираем категорию beauty из списка Category.
+    1. Ввести любой товар
   expected-result: |
     Страница выводит искомый товар.
   actual-result: |
-    На странице ничего не происходит.
-    Страница выводит посторонние товары
+    На странице не отображается никаких товаров, соответствующих введенному ключевому слову. 
+    Пользователю показывается сообщение об отсутствии результатов поиска.
 
 - summary: |
     Просмотр корзины и добавление товара
