--- a/bugreports.yml
+++ b/bugreports.yml
@@ -13,19 +13,18 @@
     Пользователю показывается сообщение об отсутствии результатов поиска.
 
 - summary: |
-    Просмотр корзины и добавление товара
+    Ошибка при добавлении товара в корзину
   environment: |
     Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
     ОС MacOS 15.3.1 (24D70)
   steps-to-reproduce: |
-    1. Вводим в поиск ключевое слово Lipstick.
-    2. Выбираем категорию beauty из списка Category.
-    3. Нажимаем на кнопку Add to cart.
-    4. Нажимаем на "Cart".
+    1. Выбрать любой товар
+    2. Добавить товар в коризну
+    3. Открыть корзину
   expected-result: |
-    Искомый товар добавлен в корзину
+    Товар успешно добавлен и отображается в корзине
   actual-result: |
-    При нажатии на кнопку "Add to cart" ничего не произошло
+    Товар не отображается в корзине.
 
 - summary: |
     Просмотр товара Red lipstick и подробной информации о нем
