--- a/bugreports.yml
+++ b/bugreports.yml
@@ -63,15 +63,13 @@
     Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
     ОС MacOS 15.3.1 (24D70)
   steps-to-reproduce: |
-    1. Вводим в поиск ключевое слово Lipstick.
-    2. Выбираем категорию beauty из списка Category.
-    3. Нажимаем на кнопку Add to cart.
-    4. Нажимаем на Cart.
-    5. Нажимаем кнопку Chekout
+    1. Выбрать любой товар
+    2. Добавить товар в корзину
+    3. Открыть коризну
+    4. Проверить товар
   expected-result: |
     Видим весь заказанный товар, цену по каждому товару, количество штук товара и общую цену
   actual-result: |
-    Не отображается цена или другой параметр, который должен отображаться
     В DevTools есть ошибка 500 failed
     
     
