--- a/test-cases.yml
+++ b/test-cases.yml
@@ -5,7 +5,7 @@
     При вводе ключевого слова или категории пользователь находит искомый товар.
   prerequisites: no-data
   steps: |
-    - Ввести любой товар
+    - Ввести любой товар, например - iPhone
   expected-result: | 
     Страница выводит искомый товар.
 
