--- a/test-cases.yml
+++ b/test-cases.yml
@@ -7,7 +7,7 @@
   steps: |
     - Ввести любое название товара, например - iPhone
   expected-result: | 
-    Страница выводит искомый товар.
+    Отображаются все товары согласно введенному запросу.
 
 - summary: |
     Добавление товара в корзину
