--- a/test-cases.yml
+++ b/test-cases.yml
@@ -35,11 +35,20 @@
 - summary: |
     Фильтр товаров по бренду
   requirement: |
-    Пользователь с помощью фильтров может сортировать товары.
+    Пользователь с помощью фильтров может сортировать товары по бренду.
   prerequisites: no-data
   steps: |
     - Выбрать любой бренд
   expected-result: | 
-    Отображаются товары выбранного бренда
-  
+    Отображаются товары согласно выбранного бренда
+
+- summary: |
+    Сортировка товаров по категории
+  requirement: |
+    Пользователь с помощью фильтров может сортировать товары по категории.
+  prerequisites: no-data
+  steps: |
+    - Выбрать любую категорию
+  expected-result: | 
+    Отображаются товары согласно выбранной категории
     
