--- a/test-cases.yml
+++ b/test-cases.yml
@@ -3,7 +3,8 @@
     Поиск товаров по ключевому слову
   requirement: |
     При вводе ключевого слова или категории пользователь находит искомый товар.
-  prerequisites: no-data
+  prerequisites: |
+  no-data
   steps: |
     - Ввести любое название товара, например - iPhone
   expected-result: | 
@@ -13,7 +14,8 @@
     Добавление товара в корзину
   requirement: |
     Пользователь может добавить товар в корзину и посмотреть её содержимое.
-  prerequisites: no-data
+  prerequisites: |
+  no-data
   steps: |
     - Выбрать любой товар
     - Добавить товар в корзину
@@ -24,8 +26,9 @@
 - summary: |
     Просмотр товара и подробной информации о нём
   requirement: |
-    Пользователь может просмотреть товар Красная помада и информацию о нём, включая описание, цену, рейтинг, скидку, количество товара.
-  prerequisites: no-data
+    Пользователь может просмотреть товар и подробную информацию о нём
+  prerequisites: |
+  no-data
   steps: |
     - Выбрать любой товар
     - Открыть выбранный товар
@@ -36,7 +39,8 @@
     Фильтр товаров по бренду
   requirement: |
     Пользователь с помощью фильтров может сортировать товары по бренду.
-  prerequisites: no-data
+  prerequisites: |
+  no-data
   steps: |
     - Выбрать любой бренд
   expected-result: | 
@@ -46,9 +50,35 @@
     Сортировка товаров по категории
   requirement: |
     Пользователь с помощью фильтров может сортировать товары по категории.
-  prerequisites: no-data
+  prerequisites: |
+  no-data
   steps: |
-    - Выбрать любую категорию
+    - Выбрать любую категорию, например - beauty
   expected-result: | 
-    Отображаются товары согласно выбранной категории
+    Отображаются все товары согласно выбранной категории
+
+- summary: |
+    Проверка фильтра In stock
+  requirement: |
+    Пользователь должен иметь возможность просматривать ВСЕ товары каталога.
+  prerequisites: | 
+  no-data
+  steps: |
+    - Нажать на чек-бокс In stock
+  expected-result: | 
+    Отображаются все товары каталога (в наличии и не в наличии)
+
+- summary: |
+    Проверка оформления заказа
+  requirement: |
+    Пользователь должен иметь возможность оформить заказ
+  prerequisites: 
+  steps: |
+    - Добавить любой товар в корзину
+    - Открыть корзину
+    - Нажать Сheckout 
+  expected-result: | 
+    Заказ успешно оформлен
+
+
     
