--- a/bugreports.yml
+++ b/bugreports.yml
@@ -13,20 +13,6 @@
     Пользователю показывается сообщение об отсутствии результатов поиска.
 
 - summary: |
-    Ошибка при добавлении товара в корзину
-  environment: |
-    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
-    ОС MacOS 15.3.1 (24D70)
-  steps-to-reproduce: |
-    1. Выбрать любой товар
-    2. Добавить товар в коризну
-    3. Открыть корзину
-  expected-result: |
-    Товар успешно добавлен и отображается в корзине
-  actual-result: |
-    Товар не отображается в корзине.
-
-- summary: |
     Просмотр товара Red lipstick и подробной информации о нем
   environment: |
     Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
@@ -71,6 +57,46 @@
     Видим весь заказанный товар, цену по каждому товару, количество штук товара и общую цену
   actual-result: |
     В DevTools есть ошибка 500 failed
+
+- summary: |
+    Не закрывается окно оформления заказа при клике на крестик
+  environment: |
+    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
+    ОС MacOS 15.3.1 (24D70)
+  steps-to-reproduce: |
+    1. Выбрать любой товар
+    2. Добавить товар в корзину
+    3. Открыть коризну
+    4. Нажать Сheckout
+    5. Нажать на кнопку Х
+  expected-result: |
+    Окно закрывается
+  actual-result: |
+    При нажатии на кнопку Х ничего не происходит
+
+- summary: |
+    Не отображаются товары (в наличии и не в наличии) при отключении фильтра In Stock
+  environment: |
+    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
+    ОС MacOS 15.3.1 (24D70)
+  steps-to-reproduce: |
+    1. Нажать на чек-бокс In stock
+  expected-result: |
+    Отображаются все товары каталога (в наличии и не в наличии)
+  actual-result: |
+    Товар не отображаются
+
+- summary: |
+    Не отображается иконка английского языка в языковом меню
+  environment: |
+    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
+    ОС MacOS 15.3.1 (24D70)
+  steps-to-reproduce: |
+    1. Нажать на Language
+  expected-result: |
+    Видим иконки русского и английского языков
+  actual-result: |
+    Не отображается иконка английского языка
     
     
     
