--- a/bugreports.yml
+++ b/bugreports.yml
@@ -10,7 +10,7 @@
     Страница выводит искомый товар.
   actual-result: |
     На странице не отображается никаких товаров, соответствующих введенному ключевому слову. 
-    Пользователю показывается сообщение об отсутствии результатов поиска.
+    Пользователю показывается сообщение Nothing found!
 
 - summary: |
     Ошибка 500 при оформлении заказа
