--- a/bugreports.yml
+++ b/bugreports.yml
@@ -66,6 +66,32 @@
     Видим иконки русского и английского языков
   actual-result: |
     Не отображается иконка английского языка
-    
+
+- summary: |
+    Нет мобильной версии сайта
+  environment: |
+    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
+    ОС MacOS 15.3.1 (24D70)
+  steps-to-reproduce: |
+    1. Открыть devtools
+    2. Выбрать меню адаптивности
+    3. Выбрать любой мобильный девайс, например - iPhone XR
+  expected-result: |
+    Есть мобильная версия сайта
+  actual-result: |
+    Мобильная версия не реализована
+
+- summary: |
+    Нетсброса выбранного фильтра по категории
+  environment: |
+    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
+    ОС MacOS 15.3.1 (24D70)
+  steps-to-reproduce: |
+    1. Выбрать любую категорию
+    2. Сбросить выбранный фильтр
+  expected-result: |
+    Сбросится выбранный фильтр
+  actual-result: |
+    Нет возможности сброса выбранного фильтра
     
     
