--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,1 +1,63 @@
-bugreports: []
+---
+test-cases:
+- summary: |
+    Поиск товаров по ключевому слову
+  status: pass
+
+- summary: |
+    Добавление товара в корзину
+  status: pass 
+
+- summary: |
+    Просмотр товара  и подробной информации о нем
+  status: pass
+
+- summary: |
+    Фильтр товаров по бренду
+  status: pass
+
+- summary: |
+    Сортировка товаров по категории
+  status: pass
+
+- summary: |
+    Проверка фильтра In stock
+  status: pass
+
+- summary: |
+    Проверка оформления заказа
+  status: fail
+
+bugreports:
+- summary: |
+    Ошибка 500 при оформлении заказа
+  environment: |
+    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
+    ОС MacOS 15.3.1 (24D70)
+  steps-to-reproduce: |
+    1. Выбрать любой товар
+    2. Добавить товар в корзину
+    3. Открыть коризну
+    4. Проверить товар
+  expected-result: |
+    Видим весь заказанный товар, цену по каждому товару, количество штук товара и общую цену
+  actual-result: |
+    В DevTools есть ошибка 500 failed
+
+- summary: |
+    Не закрывается окно оформления заказа при клике на крестик
+  environment: |
+    Google Chrome   134.0.6998.45 (Официальная сборка) (64 бит)
+    ОС MacOS 15.3.1 (24D70)
+  steps-to-reproduce: |
+    1. Выбрать любой товар
+    2. Добавить товар в корзину
+    3. Открыть коризну
+    4. Нажать Сheckout
+    5. Нажать на кнопку Х
+  expected-result: |
+    Окно закрывается
+  actual-result: |
+    При нажатии на кнопку Х ничего не происходит
+
+
