--- a/test-cases.yml
+++ b/test-cases.yml
@@ -2,7 +2,7 @@
 - summary: |
     Поиск товаров по ключевому слову
   requirement: |
-    При вводе ключевого слова или категории пользователь находит искомый товар.
+    При вводе ключевого слова пользователь находит искомый товар.
   prerequisites: |
   no-data
   steps: |
