--- a/test-cases.yml
+++ b/test-cases.yml
@@ -5,6 +5,8 @@
     При вводе ключевого слова пользователь находит искомый товар.
   prerequisites: |
     no data
+  test-data: |
+    no data
   steps: |
     - Ввести любое название товара, например - iPhone
   expected-result: | 
@@ -15,6 +17,8 @@
   requirement: |
     Пользователь может добавить товар в корзину и посмотреть её содержимое.
   prerequisites: |
+    no data
+  test-data: |
     no data
   steps: |
     - Выбрать любой товар
@@ -29,6 +33,8 @@
     Пользователь может просмотреть товар и подробную информацию о нём
   prerequisites: |
     no data
+  test-data: |
+    no data
   steps: |
     - Выбрать любой товар
     - Открыть выбранный товар
@@ -41,6 +47,8 @@
     Пользователь с помощью фильтров может сортировать товары по бренду.
   prerequisites: |
     no data
+  test-data: |
+    no data
   steps: |
     - Выбрать любой бренд
   expected-result: | 
@@ -51,6 +59,8 @@
   requirement: |
     Пользователь с помощью фильтров может сортировать товары по категории.
   prerequisites: |
+    no data
+  test-data: |
     no data
   steps: |
     - Выбрать любую категорию, например - beauty
@@ -63,6 +73,8 @@
     Пользователь должен иметь возможность просматривать ВСЕ товары каталога.
   prerequisites: | 
     no data
+  test-data: | 
+    no data
   steps: |
     - Нажать на чек-бокс In stock
   expected-result: | 
@@ -73,6 +85,8 @@
   requirement: |
     Пользователь должен иметь возможность оформить заказ
   prerequisites: |
+    no data
+  test-data: |
     no data
   steps: |
     - Добавить любой товар в корзину
